# practical-cplusplus-design-2e

./: LICENSE.txt  README.md  errata.md
PracticalC++DesignSrcCode/: CMakeLists.txt
PracticalC++DesignSrcCode/src/: CMakeLists.txt
PracticalC++DesignSrcCode/src/app/: CMakeLists.txt
PracticalC++DesignSrcCode/src/app/pdCalc/: CMakeLists.txt  main.cpp
PracticalC++DesignSrcCode/src/app/pdCalc-simple-cli/: CMakeLists.txt  main.cpp
PracticalC++DesignSrcCode/src/app/pdCalc-simple-gui/: CMakeLists.txt  main.cpp
PracticalC++DesignSrcCode/src/backend/: AppObservers.m.cpp  CMakeLists.txt  Command.cpp  Command.m.cpp  CommandDispatcher.m.cpp  CommandFactory.m.cpp  CommandInterpreter.cpp  CommandInterpreter.m.cpp  CommandManager.m.cpp  CoreCommands.m.cpp  DynamicLoader.m.cpp  PlatformFactory.cpp  PlatformFactory.m.cpp  Plugin.m.cpp  PluginLoader.m.cpp  PosixDynamicLoader.m.cpp  PosixFactory.cpp  PosixFactory.m.cpp  Stack.m.cpp  StackPluginInterface.cpp  StackPluginInterface.m.cpp  StoredProcedure.cpp  StoredProcedure.m.cpp  WindowsDynamicLoader.m.cpp  WindowsFactory.cpp  WindowsFactory.m.cpp
PracticalC++DesignSrcCode/src/plugins/: plugins.pdp.win
PracticalC++DesignSrcCode/src/plugins/hyperbolicLnPlugin/: CMakeLists.txt  HyperbolicLnPlugin.cpp
PracticalC++DesignSrcCode/src/ui/: CMakeLists.txt  Cli.m.cpp  CommandButton.cpp  Display.cpp  Display.h  GuiModel.cpp  InputWidget.cpp  InputWidget.h  LookAndFeel.cpp  LookAndFeel.h  MainWindow.cpp  MainWindow.h  UserInterface.m.cpp
PracticalC++DesignSrcCode/src/utilities/: CMakeLists.txt  Exception.m.cpp  Observer.m.cpp  Publisher.m.cpp  Tokenizer.m.cpp  Utilities.m.cpp
PracticalC++DesignSrcCode/test/: CMakeLists.txt
PracticalC++DesignSrcCode/test/backendTest/: CMakeLists.txt  CommandFactoryTest.cpp  CommandFactoryTest.h  CommandInterpreterTest.cpp  CommandInterpreterTest.h  CommandManagerTest.cpp  CommandManagerTest.h  CoreCommandsTest.cpp  PluginLoaderTest.cpp  StackTest.cpp  StoredProcedureTest.cpp  plugins.win.pdp
PracticalC++DesignSrcCode/test/pluginsTest/: CMakeLists.txt  HyperbolicLnPluginTest.cpp
PracticalC++DesignSrcCode/test/testDriver/: CMakeLists.txt  main.cpp
PracticalC++DesignSrcCode/test/uiTest/: CMakeLists.txt  CliTest.cpp  CliTest.h  DisplayTest.cpp  DisplayTest.h
PracticalC++DesignSrcCode/test/utilitiesTest/: CMakeLists.txt  PublisherObserverTest.cpp  PublisherObserverTest.h  TokenizerTest.cpp  TokenizerTest.h
